Obsługa przycisków multiplayer